<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">贝贝屋</string>
    <string name="title_shenbian">身边</string>
    <string name="title_haoyou">好友</string>
    <string name="title_xiaoxi">消息</string>
    <string name="title_dongtai">动态</string>
    <string name="title_wode">我的</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_main5">Main5Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="media_picker_select_from">选择:</string>
    <string name="media_picker_camera">相机</string>
    <string name="media_picker_gallery">相册</string>
    <string name="media_picker_ok">同意</string>
    <string name="media_picker_cancel">取消</string>
    <string name="media_picker_some_permission_is_denied">某些授权被拒绝</string>
    <string name="media_picker_you_need_to_grant_access_to">您需要授权可调用</string>
    <string name="media_picker_read_Write_external_storage"><![CDATA[读写外部储存器]]></string>
    <string name="title_activity_personage">PersonageActivity</string>
</resources>
