<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shenbian"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_shenbian" />

    <item
        android:id="@+id/navigation_xiaoxi"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_xiaoxi" />
    <item
        android:id="@+id/navigation_haoyou"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_haoyou" />

    <item
        android:id="@+id/navigation_dongtai"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_dongtai" />
    <item
        android:id="@+id/navigation_wode"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_wode" />

</menu>
